--- a/Tabang-Hub/Tabang-Hub/Views/Organization/Reports.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Organization/Reports.cshtml
@@ -62,7 +62,7 @@
 <div class="page-content">
     <section class="row">
         <!-- Container for Total Stats -->
-        <div class="col-12 mb-4">
+        <div class="col-12">
             <div class="row">
                 <!-- Total Events, Total Donations, and Total Volunteers in same container -->
                 <div class="col-12 col-md-4 mb-4">
