--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Admin.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Admin.cshtml
@@ -11,6 +11,15 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="~/Content/css1/bootstrap.css">
+
+    <link rel="stylesheet" href="~/Content/vendors/perfect-scrollbar/perfect-scrollbar.css">
+    <link rel="stylesheet" href="~/Content/vendors/bootstrap-icons/bootstrap-icons.css">
+    <link rel="stylesheet" href="~/Content/css1/app.css">
+    <link rel="shortcut icon" href="~/Content/images1/favicon.svg" type="image/x-icon">
+
 </head>
 <body>
 
@@ -41,7 +50,7 @@
                         <a class="nav-link" href="~/Admin/ManageSkill">Manage Skill</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Reports</a>
+                        <a class="nav-link" href="~/Admin/Reports">Reports</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">History</a>
@@ -68,6 +77,11 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <script src="~/Content/vendors/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+    <script src="~/Content/js1/bootstrap.bundle.min.js"></script>
+
+    <script src="~/Content/js1/main.js"></script>
 
 </body>
 </html>
