--- a/Tabang-Hub/Tabang-Hub/Content/Css/message.css
+++ b/Tabang-Hub/Tabang-Hub/Content/Css/message.css
@@ -3,14 +3,14 @@
     margin: 0;
     font-family: Arial, sans-serif;
     height: 87.1vh;
-    background-color: #36393f;
+    background-color: #f2f7ff;
     overflow: hidden; /* Prevent page scrolling */
 }
 
 .chat-list {
     width: 25%;
-    background-color: #2c2f33;
-    color: #fff;
+    background-color: #fff;
+    color: #5A6F80;
     overflow-y: auto;
 }
 
@@ -24,12 +24,12 @@
     display: flex;
     align-items: center;
     padding: 10px 20px;
-    border-bottom: 1px solid #3a3d41;
+    /*border-bottom: 1px solid #3a3d41;*/
     cursor: pointer;
 }
 
     .chat-item:hover {
-        background-color: #3a3d41;
+        background-color: #f2f7ff;
     }
 
     .chat-item img {
@@ -50,14 +50,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: #36393f;
+    background-color: #f2f7ff;
     color: #fff;
     height: 85vh;
 }
 
 .user-name {
     font-size: 0.85em;
-    color: #ccc;
+    color: #5A6F80;
     font-weight: bold;
     margin-bottom: 3px; /* Adjust space between name and message */
     padding-left: 8px; /* Optional padding */
@@ -83,7 +83,7 @@
 
     .message span {
         display: inline-block;
-        background-color: #1e2124;
+        background-color: #38517a;
         padding: 15px;
         border-radius: 15px;
         color: #fff;
