--- a/Tabang-Hub/Tabang-Hub/Views/Page/Login.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Page/Login.cshtml
@@ -39,7 +39,7 @@
                                     <label for="email" class="form-label">Email Address</label>
                                     <div class="input-group">
                                         <span class="input-group-text"><i class="fas fa-envelope"></i></span>
-                                        <input type="text" class="form-control" id="email" name="email" placeholder="Enter Your Email" required>
+                                        <input type="text" class="form-control" id="username" name="username" placeholder="Enter Your Email" required>
                                     </div>
                                 </div>
                                 <div class="mb-3">
